# jr-drew-content-brainstorm

./: .editorconfig  .gitignore  .pre-commit-config.yaml  2025-10-27-62530-Brainstorm.md  BRANCHING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIREBASE_DOCS_COMPLETION_SUMMARY.md  FIREBASE_EMULATORS_COMPLETE.md  FIREBASE_FUNCTIONS_ANALYSIS_20251031.md  GIT_BRANCH_RESTRUCTURE_REPORT.md  IMPLEMENTATION_SUMMARY.md  MIGRATE_WEBNEXT_TO_PRODUCTION.md  MIGRATION_COMPLETE.md  MIGRATION_FINAL_REPORT.md  MIGRATION_INDEX.md  MIGRATION_PROGRESS_REPORT.md  MIGRATION_SUMMARY.md  MONITORING_CHECKLIST_20251031.md  Makefile  PRE_FLIGHT_CHECKLIST.md  QUICKSTART.md  README.md  REPO_AUDIT_2025-10-31.md  RUNNING_SERVICES.md  SUCCESS_REPORT_20251031_1239.md  WARP.md  WARP_PLANNING_OUTPUT.md  WARP_VALIDATION_REPORT.md  WEB_NEXT_REMOVAL_AUDIT.md  codex-context-blackscreen-diagnosis.md  emulators.pid  eslint.strict.config.mjs  eslint.warn.config.mjs  execute-firebase-docs.sh  execute-migration.sh  fix-all-issues.md  mkdocs-serve.pid  mkdocs.yml  package.json  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ci-audit/: cost-hints.md  workflows-audit.json
.github/workflows/: ci.yml  deploy.yml  docs-deploy.yml  docs.yml.disabled  functions-ci.yml.disabled  web-deploy.yml.disabled
apps/electron/: electron-main.ts  package.json  pnpm-lock.yaml  preload.ts
apps/web-next/: SETUP.md  middleware.ts  package.json  quickstart.sh  (+3 more)
scripts/: bootstrap.sh  docs-build.sh  docs-serve.sh  ensure-venv.sh  extract-component.sh  firebase-audit.mjs  format.sh  generate-eslint-report.mjs  inventory-frontend.mjs  lint.sh  merge_intelligent.sh  reorg_root_markdown.sh  restart-emulators.sh  run-agent.sh  run-firebase-backend-implementation.sh  run-firebase-integration-agent.sh  sandbox-serve.sh  scaffold_v2_extract.sh  test.sh  validate-dev-env.sh
shared/: package.json  tsconfig.json
(+313 files in other folders)
